k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
spec: {}
