k8s/notejam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam
  labels:
    app: notejam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notejam
  template:
    metadata:
      labels:
        app: notejam
    spec:
      containers:
      - name: notejam
        image: REGISTRY_URL:IMAGE_VERSION
        ports:
        - containerPort: 80
