k8s/notejam-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notejam-service
  labels:
    service: notejam-service 
  # annotations:
    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app: notejam
