k8s/notejam-ingress-alb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notejam
  annotations:
    # Empty until we create the certificate in ACM as per README
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/group.name: "CLUSTER_NAME"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # alb.ingress.kubernetes.io/target-type: ip
    cert-manager.io/cluster-issuer: CLUSTER_NAME
    kubernetes.io/ingress.class: alb
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - ROUTE53_ZONE_FQDN
      secretName: notejam-tls
  rules:
    - host: ROUTE53_ZONE_FQDN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notejam-service
                port:
                  number: 80
