k8s/notejam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: notejam-ingress
spec:
  rules:
  - host: "simulator.sh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notejam-service
            port:
              number: 80
